--- a/app/src/main/res/layout/activity_module.xml
+++ b/app/src/main/res/layout/activity_module.xml
@@ -4,24 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ModuleActivity">
+    tools:context=".ModuleActivity"
+    android:layout_marginLeft="10dp"
+
+    >
 
     <TextView
+
         android:id="@+id/tvmodule"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginTop="10dp"
         android:text="modulenaam" />
 
     <TextView
         android:id="@+id/tvbeschrijving"
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+
+
         android:layout_marginTop="55dp"
-        android:layout_marginEnd="16dp"
         android:text="beschrijving van module"
         app:layout_constraintTop_toBottomOf="@+id/tvmodule" />
 
@@ -29,9 +31,9 @@
         android:id="@+id/tvstatus"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+
         android:layout_marginTop="155dp"
-        android:layout_marginEnd="16dp"
+
         android:text="Nog niet ingeschreven"
         app:layout_constraintTop_toBottomOf="@+id/tvbeschrijving" />
 
@@ -42,7 +44,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="228dp"
         android:text="inschrijven"
-        app:layout_constraintTop_toBottomOf="@+id/tvbeschrijving"
+        app:layout_constraintTop_toBottomOf="@+id/tvstatus"
         tools:layout_editor_absoluteX="123dp" />
 
 
