--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,8 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:xmlsn="http://schemas.android.com/tools"
-
-
+    android:background="@drawable/luchtdag"
+    android:paddingBottom="150dp"
     android:gravity="center"
     android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/apk/res-auto"
@@ -16,7 +16,9 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="22dp"
-      android:padding="10dp"
+      android:padding="20dp"
+      android:paddingLeft="50dp"
+      android:paddingRight="50dp"
       android:text="Alle modules"
       android:onClick="naarAlles"
       tools:layout_editor_absoluteX="123dp" />
@@ -24,8 +26,10 @@
       android:id="@+id/btnMijn"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginTop="22dp"
-      android:padding="10dp"
+      android:layout_marginTop="15dp"
+      android:padding="20dp"
+      android:paddingLeft="50dp"
+      android:paddingRight="50dp"
       android:text="Mijn Modules"
       android:onClick="naarMijn"
       tools:layout_editor_absoluteX="123dp" />
