--- a/app/src/main/res/layout/activity_module.xml
+++ b/app/src/main/res/layout/activity_module.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ModuleActivity"
-    android:layout_marginLeft="10dp"
+    android:gravity="center_horizontal"
+    android:layout_margin="20dp"
+    android:background="#b3d9ff"
 
     >
 
@@ -14,17 +16,21 @@
         android:id="@+id/tvmodule"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="modulenaam" />
+
+        android:text="modulenaam"
+        android:textStyle="bold"
+        android:textSize="26dip"
+
+        android:gravity="center_horizontal"/>
 
     <TextView
         android:id="@+id/tvbeschrijving"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
 
-
-        android:layout_marginTop="55dp"
-        android:text="beschrijving van module"
+        android:text="beschrijving vaeen vol k een reicht wir levenn module"
+        android:textSize="16dip"
         app:layout_constraintTop_toBottomOf="@+id/tvmodule" />
 
     <TextView
@@ -33,17 +39,21 @@
         android:layout_height="wrap_content"
 
         android:layout_marginTop="155dp"
-
+        android:textSize="16dip"
         android:text="Nog niet ingeschreven"
         app:layout_constraintTop_toBottomOf="@+id/tvbeschrijving" />
 
 
     <Button
         android:id="@+id/btnjoin"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="10dp"
         android:layout_marginTop="228dp"
         android:text="inschrijven"
+        android:textSize="16dip"
+        android:textStyle="bold"
+
         app:layout_constraintTop_toBottomOf="@+id/tvstatus"
         tools:layout_editor_absoluteX="123dp" />
 
