changed parentActivity + succesfull get/display data from API

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     android:gravity="center"
     android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/background"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
 
