--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,17 @@
       android:onClick="naarMijn"
       tools:layout_editor_absoluteX="123dp" />
 
+  <Button
+      android:id="@+id/btnMijn2"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="15dp"
+      android:onClick="naarLogin"
+      android:padding="20dp"
+      android:paddingLeft="50dp"
+      android:paddingRight="50dp"
+      android:text="Uitloggen"
+      tools:layout_editor_absoluteX="123dp" />
 
 
 </LinearLayout>
