--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,10 +39,11 @@
       android:id="@+id/btnMijn2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginTop="15dp"
+      android:layout_marginVertical="10dp"
+      android:layout_marginTop="500dp"
       android:onClick="naarLogin"
       android:padding="20dp"
-      android:paddingLeft="50dp"
+      android:paddingLeft="0dp"
       android:paddingRight="50dp"
       android:text="Uitloggen"
       tools:layout_editor_absoluteX="123dp" />
