--- a/app/src/main/res/layout/activity_module.xml
+++ b/app/src/main/res/layout/activity_module.xml
@@ -7,8 +7,7 @@
     tools:context=".ModuleActivity"
     android:gravity="center_horizontal"
     android:padding="20dp"
-    android:background="#b3d9ff"
-
+    android:background="#e7e7e7"
     >
 
     <TextView
