--- a/app/src/main/res/layout/activity_textview.xml
+++ b/app/src/main/res/layout/activity_textview.xml
@@ -14,7 +14,7 @@
     android:textAlignment="center"
     android:layout_gravity="center"
     android:topRightRadius="10dp"
-    android:background="#4F4E4E"
+    android:background="@color/colorPrimary"
 
   >
 </TextView>
