--- a/app/src/main/res/layout/activity_module.xml
+++ b/app/src/main/res/layout/activity_module.xml
@@ -47,12 +47,13 @@
         android:id="@+id/btnjoin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
         android:layout_marginTop="228dp"
+        android:padding="10dp"
         android:text="inschrijven"
         android:textSize="16dip"
         android:textStyle="bold"
-
+        android:background="@color/colorPrimary"
+        android:textColor="#fff"
         app:layout_constraintTop_toBottomOf="@+id/tvstatus"
         tools:layout_editor_absoluteX="123dp" />
 
