--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
       android:padding="20dp"
       android:paddingLeft="50dp"
       android:paddingRight="50dp"
-      android:text="Alle modules"
+      android:text="Alle keuzevakken"
       android:onClick="naarAlles"
       android:background="@color/colorPrimary"
       android:textColor="#fff"
@@ -34,7 +34,7 @@
       android:padding="20dp"
       android:paddingLeft="50dp"
       android:paddingRight="50dp"
-      android:text="Mijn Modules"
+      android:text="Mijn keuzevakken"
       android:onClick="naarMijn"
       android:background="@color/colorPrimary"
       android:textColor="#fff"
